--- a/docker/compose.yml
+++ b/docker/compose.yml
@@ -9,3 +9,12 @@ services:
     volumes:
       - ..:/workspaces
       - ../../doc-ja:/workspaces/ja
+      - ../../doc-en:/workspaces/en
+  php84:
+    image: php:8.4-fpm-alpine
+    environment:
+      TZ: "Asia/Tokyo"
+      LANG: "ja_JP.UTF-8"
+    working_dir: /sandbox
+    volumes:
+      - ../../sandbox:/sandbox
